--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,29 @@ services:
       - $PWD/order/data:/var/lib/postgresql/data
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
+
+  nats-streaming-db:
+    image: postgres
+    expose:
+      - "5434"
+    ports:
+      - "5434:5434"
+    volumes:
+      - $PWD/nats-streaming-data:/var/lib/postgresql/data
+      - $PWD/pg-init-scripts:/docker-entrypoint-initdb.d/
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+    command: -p 5434
+
+  nats-streaming:
+    image: nats-streaming:linux
+    ports:
+      - "4222:4222"
+      - "8222:8222"
+    command:
+      - "--cluster_id=dev"
+      - "--store=SQL"
+      - "--sql_driver=postgres"
+      - "--sql_source=postgres://postgres@nats-streaming-db:5434/postgres?sslmode=disable"
+      - "--sql_no_caching=true"
+      - "--sql_max_open_conns=80"
