--- a/event-store/package.json
+++ b/event-store/package.json
@@ -3,8 +3,32 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": ""
+    "dev": "NODE_ENV=dev nodemon ./src/app.js --exec babel-node",
+    "transpile": "babel ./src --out-dir dist",
+    "clean": "rimraf dist",
+    "build": "npm-run-all clean transpile",
+    "prod": "node ./dist/app.js",
+    "start": "NODE_ENV=production npm-run-all build prod"
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.4",
+    "db-migrate": "^0.11.11",
+    "db-migrate-pg": "^1.2.2",
+    "grpc": "^1.24.2",
+    "pg": "^8.2.1",
+    "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-private-methods": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "eslint": "^7.1.0",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.13.5",
+    "rimraf": "^3.0.2"
   }
 }
