order_update: add node-nats-streaming library in order service for communication on nats network

--- a/order/package.json
+++ b/order/package.json
@@ -19,6 +19,7 @@
     "grpc": "^1.24.2",
     "http-status-codes": "^1.4.0",
     "morgan": "~1.9.1",
+    "node-nats-streaming": "^0.3.2",
     "pg": "^8.2.1",
     "uuid": "^8.1.0"
   },
