--- a/event-store/package.json
+++ b/event-store/package.json
@@ -11,6 +11,7 @@
     "start": "NODE_ENV=production npm-run-all build prod"
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.2",
     "@grpc/proto-loader": "^0.5.4",
     "db-migrate": "^0.11.11",
     "db-migrate-pg": "^1.2.2",
@@ -25,11 +26,11 @@
     "@babel/node": "^7.10.1",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-private-methods": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "eslint": "^7.1.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "regenerator-runtime": "^0.13.5",
     "rimraf": "^3.0.2"
   }
 }
