--- a/helm-charts/charts/nats-streaming-db/templates/deploy.yaml
+++ b/helm-charts/charts/nats-streaming-db/templates/deploy.yaml
@@ -5,7 +5,9 @@ metadata:
   labels:
     app: {{ .Chart.Name }}
 spec:
-  replicas: 1
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
