kubernetes: add restart policy to nats-streaming docker service so that the services can be started with a single command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,6 @@ services:
       - "--sql_no_caching=true"
       - "--sql_max_open_conns=80"
       - "--http_port=8222"
+    deploy:
+      restart_policy:
+        condition: on-failure
